--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,7 +4,7 @@
     <title>Spring Security Example </title>
 </head>
 <body>
-<p th:if="${loginError}" class="error">Wrong user or password</p>
+<p th:if="${loginError}" class="error">Wrong email or password</p>
 <form th:action="@{/login}" method="post">
     <div><label> User Name : <input type="text" name="username"/> </label></div>
     <div><label> Password: <input type="password" name="password"/> </label></div>
