--- a/src/main/resources/templates/admin/user_list.html
+++ b/src/main/resources/templates/admin/user_list.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
-<html lang="en"
-      xmlns="http://www.w3.org/1999/xhtml"
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Users List</title>
-</head>
+<div th:replace="fragments/head :: head"></div>
 <body>
-<table>
-    <thead>
+<div th:replace="fragments/header :: header"></div>
+<div   class="p-5 text-center bg-image"
+       style="background-image: url('/images/background.jpg');
+      height: 550px;">
+    <div class="mask" style="background-color: rgba(0, 0, 0, 0.7);">
+        <div class="opacity-80">
+<table class="table align-middle mb-0 bg-white">
+    <thead class="bg-light">
     <tr>
-        <th> Id </th>
-        <th> First Name </th>
-        <th> Surname </th>
-        <th> Email </th>
-        <th> Role </th>
+        <th>Name</th>
+        <th>Role</th>
+        <th>Status</th>
+        <th>Actions</th>
     </tr>
     </thead>
     <tbody>
@@ -22,11 +23,23 @@
         <td colspan="2"> No Users Available </td>
     </tr>
     <tr th:each="user : ${userDtoList}">
-        <td><span th:text="${user.id}"> Id </span></td>
-        <td><span th:text="${user.firstName}"> Id </span></td>
-        <td><span th:text="${user.lastName}"> Id </span></td>
-        <td><span th:text="${user.email}"> Id </span></td>
-        <td><span th:text="${user.role}"> Id </span></td>
+        <td>
+            <div class="d-flex align-items-center">
+                <img src=""
+                     th:src="@{/images/user_avatar.png}" height="80"/>
+                <div class="ms-3">
+                    <p class="fw-bold mb-1" th:text="${user.firstName} + ' ' + ${user.lastName}"></p>
+                    <p class="text-muted mb-0" th:text="${user.email}"></p>
+                </div>
+            </div>
+        </td>
+        <td>
+            <p class="fw-normal mb-1" th:text="${user.role}"></p>
+            <p class="text-muted mb-0">Local Railways</p>
+        </td>
+        <td>
+            <span class="badge badge-success rounded-pill d-inline">Active</span>
+        </td>
         <td><ul>
             <li>
                 <form th:method="GET" action="#" th:action="@{/admin/users/{id}/edit(id=${user.id})}">
@@ -43,5 +56,8 @@
     </tr>
     </tbody>
 </table>
+        </div>
+        </div>
+</div>
 </body>
 </html>
