--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -8,14 +8,36 @@
 <div th:fragment="header">
     <div style="text-align: center; box-sizing: content-box;">
     </div>
-    <div style="text-align: center;background:#C2C2D6;;height: 50px;padding: 5px;border-radius: 10px;">
-        <h1>HOTEL</h1>
+    <div style="text-align: center;background:#FFFFFF;;height: 80px;padding: 5px;
+        ">
+        <img src=""
+             th:src="@{/images/local_railway.png}" height="80"/>
+
     </div>
     <!-- GUEST VIEW-->
     <div sec:authorize="isAnonymous()">
-        <nav class="navbar navbar-expand-lg navbar-light ">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand">Welcome, Guest</a>
+                <!-- Toggle button -->
+                <button
+                        class="navbar-toggler"
+                        type="button"
+                        data-mdb-toggle="collapse"
+                        data-mdb-target="#navbarSupportedContent"
+                        aria-controls="navbarSupportedContent"
+                        aria-expanded="false"
+                        aria-label="Toggle navigation">
+                    <i class="fas fa-bars"></i>
+                </button>
+                <a class="navbar-brand mt-2 mt-lg-0" th:href="@{/index}">
+                    <img
+                            src=""
+                            th:src="@{/images/train_header.png}"
+                            height="30"
+                            alt="MDB Logo"
+                            loading="lazy"
+                    />
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                         aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -30,6 +52,16 @@
                         </li>
                     </ul>
                 </div>
+                <a class="navbar-brand">Welcome, Guest</a>
+                <a class="navbar-brand mt-2 mt-lg-0" th:href="@{/login}">
+                    <img
+                            src=""
+                            th:src="@{/images/guest-icon.jpg}"
+                            height="30"
+                            alt="MDB Logo"
+                            loading="lazy"
+                    />
+                </a>
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
                         <a class="nav-link active" th:href="@{/register}">
@@ -48,11 +80,29 @@
 
     <!-- CUSTOMER VIEW-->
     <div sec:authorize="hasRole('ROLE_CUSTOMER')">
-        <nav class="navbar navbar-expand-lg navbar-light ">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand">Welcome,
-                    <th:text>"${#authentication.getPrincipal().getUsername()}"</th:text>
+                <!-- Toggle button -->
+                <button
+                        class="navbar-toggler"
+                        type="button"
+                        data-mdb-toggle="collapse"
+                        data-mdb-target="#navbarSupportedContent"
+                        aria-controls="navbarSupportedContent"
+                        aria-expanded="false"
+                        aria-label="Toggle navigation">
+                    <i class="fas fa-bars"></i>
+                </button>
+                <a class="navbar-brand mt-2 mt-lg-0" th:href="@{/index}">
+                    <img
+                            src=""
+                            th:src="@{/images/train_header.png}"
+                            height="30"
+                            alt="MDB Logo"
+                            loading="lazy"
+                    />
                 </a>
+                <a class="navbar-brand" th:text = "Welcome + ', ' + ${#authentication.getPrincipal().getUser().getFirstName}"/> </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                         aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -70,26 +120,66 @@
                         </li>
                     </ul>
                 </div>
-                <div>
-                    <ul class="navbar-nav ml-auto">
-                        <form th:action="@{/logout}" method="post">
-                            <li class="nav-item">
-                                <a class="nav-link active">
-                                    <input type="submit" value="Sign Out"/>
-                                </a>
-                            </li>
-                        </form>
+                <!-- Avatar -->
+                <div class="dropdown">
+                    <a
+                            class="dropdown-toggle d-flex align-items-center hidden-arrow"
+                            href="#"
+                            id="navbarDropdownMenuAvatar"
+                            role="button"
+                            data-mdb-toggle="dropdown"
+                            aria-expanded="false"
+                    >
+                        <img
+                                src=""
+                                th:src="@{/images/user_auth_icon.png}"
+                                class="rounded-circle"
+                                height="25"
+                                alt="Black and White Portrait of a Man"
+                                loading="lazy"
+                        />
+                    </a>
+                    <ul
+                            class="dropdown-menu dropdown-menu-end"
+                            aria-labelledby="navbarDropdownMenuAvatar"
+                    >
+                        <li>
+                            <a class="dropdown-item" href="#">My profile</a>
+                        </li>
+                        <li>
+                            <a class="dropdown-item" th:href="@{/logout}">Logout</a>
+                        </li>
                     </ul>
                 </div>
             </div>
         </nav>
     </div>
 
+
     <!-- ADMIN VIEW-->
     <div sec:authorize="hasRole('ROLE_ADMIN')">
-        <nav class="navbar navbar-expand-lg navbar-light ">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand">Welcome, ADMIN</a>
+                <!-- Toggle button -->
+                <button
+                        class="navbar-toggler"
+                        type="button"
+                        data-mdb-toggle="collapse"
+                        data-mdb-target="#navbarSupportedContent"
+                        aria-controls="navbarSupportedContent"
+                        aria-expanded="false"
+                        aria-label="Toggle navigation">
+                    <i class="fas fa-bars"></i>
+                </button>
+                <a class="navbar-brand mt-2 mt-lg-0" th:href="@{/index}">
+                    <img
+                            src=""
+                            th:src="@{/images/train_header.png}"
+                            height="30"
+                            alt="MDB Logo"
+                            loading="lazy"
+                    />
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                         aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -103,28 +193,59 @@
                             <a class="nav-link active" aria-current="page" th:href="@{/abouts-us}">About us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" th:href="@{admin/routes}">
+                            <a class="nav-link active" aria-current="page" th:href="@{/admin/routes}">
                                 ROUTES
                             </a>
                         </li>
                         <li class="nav-item"><a class="nav-link active" aria-current="page"
-                                                th:href="@{admin/stations}">
+                                                th:href="@{/admin/stations}">
                             STATIONS
                         </a>
                         </li>
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" th:href="@{admin/users}">
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" th:href="@{/admin/users}">
                             USERS
                         </a>
                         </li>
                     </ul>
-                    <form th:action="@{/logout}" method="post">
-                        <input type="submit" value="Sign Out"/>
-                    </form>
+                </div>
+                <a class="navbar-brand">Welcome, ADMIN</a>
+                <!-- Avatar -->
+                <div class="dropdown">
+                    <a
+                            class="dropdown-toggle d-flex align-items-center hidden-arrow"
+                            href="#"
+                            id="navbarDropdownMenuAvatar"
+                            role="button"
+                            data-mdb-toggle="dropdown"
+                            aria-expanded="false"
+                    >
+                        <img
+                                src=""
+                                th:src="@{/images/user_auth_icon.png}"
+                                class="rounded-circle"
+                                height="25"
+                                alt="Black and White Portrait of a Man"
+                                loading="lazy"
+                        />
+                    </a>
+                    <ul
+                            class="dropdown-menu dropdown-menu-end"
+                            aria-labelledby="navbarDropdownMenuAvatar"
+                    >
+                        <li>
+                            <a class="dropdown-item" href="#">My profile</a>
+                        </li>
+                        <li>
+                            <a class="dropdown-item" th:href="@{/logout}">Logout</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </nav>
     </div>
 
+    </nav>
+</div>
 </div>
 </body>
 </html>
