--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,104 +5,84 @@
 <div th:replace="fragments/head :: head"></div>
 <body>
 <div th:replace="fragments/header :: header"></div>
+<div   class="p-5 text-center bg-image"
+        style="background-image: url('/images/background.jpg');
+      height: 650px;">
+    <div class="mask" style="background-color: rgba(0, 0, 0, 0.7);">
+        <br>
+        <div align="center">
+            <div class="col-md-5">
+                <form action="#" th:action="@{/booking}" method="get">
+                    <div class="form-group">
+                        <select class="custom-select mr-sm-2" name="stationFrom">
+                            <option value="0">Select Departure Station</option>
+                            <option th:each="station : ${stations}" th:value="${station.id}"
+                                    th:text="${station.name}"></option>
+                        </select>
 
-<br>
-<div align="center">
-    <div class="col-md-5">
-        <form action="search-tickets.command" method="get">
-            <h3 class="mb-4 text-center">BOOKING PAGE</h3>
-            <div class="form-group">
-                <label>DEPARTURE</label>
-                <select class="custom-select mr-sm-2" name="stationFrom">
-<!--                    <c:forEach var="station" items="${stations}">-->
-<!--                        <option value="${station.id}"><fmt:message key="${station.name}"/></option>-->
-<!--                    </c:forEach>-->
-                </select>
+                    </div>
+                    <div class="form-group">
+                        <select class="custom-select mr-sm-2" name="stationTo">
+                            <option value="0">Select Arrival Station</option>
+                            <option th:each="station : ${stations}" th:value="${station.id}"
+                                    th:text="${station.name}"></option>
+                        </select>
+                        </select>
+                    </div>
+                    <p th:if="${noStations}" class="error">There are no stations</p>
+                    <p th:text="${sameStations}"></p>
+                    <button type="submit" class="btn btn-dark" value="Search">Search</button>
+                </form>
+            </div>
+        </div>
 
+        <div th:if="${not #lists.isEmpty(suitableRoutes)}">
+
+            <br><br>
+            <div align="center">
+                <table class="table table-striped table-responsive-md btn-table">
+                    <thead>
+                    <tr>
+                        <th scope="col">Train</th>
+                        <th scope="col">From/To</th>
+                        <th scope="col">Schedule</th>
+                        <th scope="col">Duration</th>
+                        <th scope="col">Seats available</th>
+                        <th scope="col">Price(UAH)</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+
+                    <th:block th:each="route : ${suitableRoutes}">
+                        <tr>
+                            <td style="text-align:center" th:text="'${route.trainId}' + 'K'"/>
+                            </strong>
+                            <br>
+                            <a th:href="@{/booking/route/{id}(id=${route.routeId})}" th:text="Route"/>">Route</a>
+                            </td>
+
+                            <td th:text="${route.departureStation} + ' - ' + ${route.arrivalStation}"></td>
+
+                            <td th:text="${route.departure} + ' - ' + ${route.arrival}"></td>
+
+                            <td th:text="${route.roadTime}"></td>
+                        </tr>
+                    </th:block>
+                    </tbody>
+                    <span style="text-align: left; color:red; font-family:courier; font-size:79%;">
+				*Only registered users can buy tickets. Login or you will be redirected accordingly
+				</span>
+                </table>
             </div>
-            <div class="form-group">
-                <label>Arrival</label>
-                <select class="custom-select mr-sm-2" name="stationTo">
-<!--                    <c:forEach var="station" items="${stations}">-->
-<!--                        <option value="${station.id}"><fmt:message key="${station.name}"/></option>-->
-<!--                    </c:forEach>-->
-                </select>
-            </div>
-            <button type="submit" class="btn btn-dark" value="Search">Search</button>
-        </form>
+        </div>
     </div>
 </div>
 
-
-    <br><br>
-    <div align="center">
-            <table class="table table-striped table-responsive-md btn-table" >
-                <thead>
-                <tr>
-                    <th scope="col">Train</th>
-                    <th scope="col">From/To</th>
-                    <th scope="col">Schedule</th>
-                    <th scope="col">Duration</th>
-                    <th scope="col">Seats available</th>
-                    <th scope="col">Price(UAH)</th>
-                </tr>
-                </thead>
-                <tbody>
-<!--                <th:block th:each="route : ${suitableRoutes}">-->
-<!--                    <tr>-->
-<!--                        <td style="text-align:center" th:text="'${route.train.id}' + 'K ' + '${route.train.model.name}'"/>-->
-<!--                            </strong>-->
-<!--                            <br>-->
-<!--                            <a href="show-route.command?route=<c:out value="${route.routeId}"/>">Route</a>-->
-<!--                        </td>-->
-
-<!--                        <td th:text ="${route.departureStation}" >-->
-<!--                            <c:out value=/>-->
-<!--                            - -->
-<!--                            <c:out value="${route.arrivalStation}"/>-->
-<!--                        </td>-->
-
-<!--                        <td>-->
-<!--                            <p style = "text-align: left">Departure: <c:out value="${route.departure}"/></p>-->
-<!--                            <br>-->
-<!--                            <p style = "text-align: left">Arrival: <c:out value="${route.arrival}"/></p>-->
-<!--                        </td>-->
-
-<!--                        <td>-->
-<!--                            <c:out value="${route.roadTime}"/>-->
-<!--                        </td>-->
-
-<!--                        <td styles = "text-align:center">-->
-<!--                            F1  <c:out value="${route.firstClassSeats}"/>-->
-<!--                            <c:if test="${route.firstClassSeats != 0}">-->
-<!--                                <a href="customer-ticket-form.command<c:out value="${route.redirectLink}"/>&class=FIRST&price=<c:out value="${route.firstClassTotalPrice}"/>"-->
-<!--                                class="btn btn-dark" >select</a>-->
-<!--                            </c:if>-->
-<!--                            <br><br>-->
-<!--                            S2  <c:out value="${route.secondClassSeats}"/>-->
-<!--                            <c:if test="${route.secondClassSeats != 0}">-->
-<!--                                <a href="customer-ticket-form.command<c:out value="${route.redirectLink}"/>&class=SECOND&price=<c:out value="${route.secondClassTotalPrice}"/>"-->
-<!--                                class="btn btn-dark" >select</a>-->
-<!--                            </c:if>-->
-<!--                        </td>-->
-
-<!--                        <td>-->
-<!--                            <p style = "text-align: center"><c:out value="${route.firstClassTotalPrice}"/></p>-->
-<!--                            <br>-->
-<!--                            <p style = "text-align: center"><c:out value="${route.secondClassTotalPrice}"/></p>-->
-<!--                        </td>-->
-<!--                    </tr>-->
-<!--                </th:block>-->
-                </tbody>
-                <span style ="text-align: left; color:red; font-family:courier; font-size:79%;">
-				*Only registered users can buy tickets. Login or you will be redirected accordingly
-				</span>
-            </table>
-</div>
-</div>
+<!-- Footer Start -->
+<div th:replace="fragments/footer :: footer"></div>
+<!-- Footer End -->
 </body>
 </html>
-
 
 
 
