--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,14 +1,77 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
-<head>
-    <title>Spring Security Example </title>
-</head>
+<html lang="en"
+      xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
+<div th:replace="fragments/head :: head"></div>
+
 <body>
-<p th:if="${loginError}" class="error">Wrong email or password</p>
-<form th:action="@{/login}" method="post">
-    <div><label> User Name : <input type="text" name="username"/> </label></div>
-    <div><label> Password: <input type="password" name="password"/> </label></div>
-    <div><input type="submit" value="Sign In"/></div>
-</form>
+<div class="p-5 text-center bg-image"
+     style="background-image: url('/images/background.jpg');
+      height: 650px;">
+    <div class="mask" style="background-color: rgba(0, 0, 0, 0.7);">
+        <div class="container py-5 h-100">
+            <div class="row d-flex justify-content-center align-items-center h-100">
+                <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+                    <div class="card text-black" style="border-radius: 1rem;">
+                        <div class="card-body p-5 text-center">
+
+                            <div class="mb-md-5 mt-md-4 pb-5">
+                                <form th:action="@{/login}" method="post">
+
+
+                                <h2 class="fw-bold mb-2 text-uppercase">Login Page</h2>
+
+                                <p class="text-white-50 mb-5">Please enter your login and password!</p>
+
+                                <p th:if="${loginError}" class="error">Wrong email or password</p>
+
+                                    <div class="d-flex flex-row align-items-center mb-4">
+                                        <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
+                                        <div class="form-outline flex-fill mb-0">
+                                            <input type="email" id="form3Example3c" name="username" class="form-control"
+                                                    placeholder="Email"/>
+                                            <label class="form-label" for="form3Example3c">Your Email</label>
+                                        </div>
+                                    </div>
+
+                                    <div class="d-flex flex-row align-items-center mb-4">
+                                        <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
+                                        <div class="form-outline flex-fill mb-0">
+                                            <input type="password" id="form3Example4c" name="password" class="form-control"
+                                            placeholder="Password" />
+                                            <label class="form-label" for="form3Example4c">Password</label>
+                                        </div>
+                                    </div>
+
+                                    <button type="submit" class="btn btn-dark">Login</button>
+                                </form>
+
+                            </div>
+
+                                    <div ALIGN="center">
+
+                                        <p class="mb-0">Don't have an account? <a th:href="@{/register}"
+                                                                                  class="text-black-50 fw-bold">Sign
+                                            Up</a>
+                                        </p>
+                                    </div>
+
+                                <br>
+                                <div>
+                                    <p class="mb-0">Something strange? <a th:href="@{/index}"
+                                                                          class="text-black-50 fw-bold">Go back</a>
+                                    </p>
+                                </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</div>
+<div th:replace="fragments/footer :: footer"></div>
+
 </body>
 </html>
