Added controllers, services, DTOs with validation. Made view

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -197,6 +197,11 @@
                                 ROUTES
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" th:href="@{/admin/wagons}">
+                                WAGONS
+                            </a>
+                        </li>
                         <li class="nav-item"><a class="nav-link active" aria-current="page"
                                                 th:href="@{/admin/stations}">
                             STATIONS
