--- a/src/main/resources/templates/admin/wagons/wagon_edit.html
+++ b/src/main/resources/templates/admin/wagons/wagon_edit.html
@@ -18,35 +18,44 @@
                     </div>
                     <input type="hidden" th:field="*{route}" value="${wagon.route}">
                     <td class="row">
-                        <div class="col-md-3">
-                            <div class="input-group mb-3">
-                                <select class="form-select" th:field="*{type}" required>
-                                    <option th:each="type : ${T(ua.martishyn.app.utils.Type).values()}"
-                                            th:value="${type}"
-                                            th:text="${type}">
-                                    </option>
-                                </select>
-                            </div>
-                                <div class="input-group mb-3">
+                        <div class="col-md-4">
+                            <div class="card-transparent ">
+                                <div class="card-block special-card"
+                                     style="background-color: rgba(245, 245, 245, 0.7); border-radius:10px;">
+                                    <h5 class="card-header" th:text="#{admin.wagon.edit.form}"></h5>
+                                    <div class="form-helper" th:text="#{label.wagon.wagon-type}"></div>
+                                    <select class="form-select" th:field="*{type}" required>
+                                        <option th:each="type : ${T(ua.martishyn.app.utils.enums.Type).values()}"
+                                                th:value="${type}"
+                                                th:text="${type}">
+                                        </option>
+                                    </select>
+
+                                    <div class="form-helper" th:text="#{label.wagon.seats}"></div>
+                                    <div class="input-group mb-3">
                                     <input type="text" class="form-control" th:field="*{numOfSeats}"
-                                           placeholder="Number of seats number" th:errorclass="is-invalid" required>
-                                </div>
-                                <div class="input-group mb-3">
+                                           placeholder="Number of available seats" th:errorclass="is-invalid" required>
+                                    </div>
+                                    <div class="form-helper" th:text="#{label.wagon.base-price}"></div>
+                                    <div class="input-group mb-3">
                                     <input type="text" class="form-control" th:field="*{basePrice}"
                                            placeholder="Basic price for seat" th:errorclass="is-invalid" required>
-                                </div>
+                                    </div>
 
                                 <div align="center">
                                     <div class="col-4">
-                                        <button type="submit" class="btn btn-success btn-rounded">Edit</button>
+                                        <button type="submit" class="btn btn-success btn-rounded" th:text="#{button.update}">Edit</button>
                                     </div>
                                 </div>
+                                <br>
                             </div>
                         </div>
-                    </td>
-            </form>
+                </div>
+                </td>
         </div>
+        </form>
     </div>
+</div>
 </div>
 <!-- Footer Start -->
 <div th:replace="fragments/footer :: footer"></div>
