--- a/src/main/resources/templates/admin/routes/route_add.html
+++ b/src/main/resources/templates/admin/routes/route_add.html
@@ -17,26 +17,36 @@
                         <p th:each="err : ${#fields.errors('*')}" th:text="${err}"></p>
                     </div>
                     <td class="row">
-                        <div class="col-md-3">
+                        <div class="col-md-4">
+                            <div class="card-transparent ">
+                                <div class="card-block special-card"
+                                     style="background-color: rgba(245, 245, 245, 0.7); border-radius:10px;">
+                                    <h5 class="card-header" th:text="#{admin.route.add.form}"></h5>
+                            <div class="form-helper" th:text="#{label.route.route}"></div>
                             <div class="input-group mb-3">
-                                <input type="text" class="form-control" th:field="*{id}" placeholder="Route number"
+                                <input type="text" class="form-control" th:field="*{id}"
                                        th:errorclass="is-invalid" required>
                             </div>
+
+                            <div class="form-helper" th:text="#{label.route.train}"></div>
                             <div class="input-group mb-3">
-                                <input type="text" class="form-control" th:field="*{trainId}" placeholder="Train number"
+                                <input type="text" class="form-control" th:field="*{trainId}"
                                        th:errorclass="is-invalid" required>
                             </div>
                             <div align="center">
                                 <div class="col-4">
-                                    <button type="submit" class="btn btn-success btn-rounded">Add</button>
+                                    <button type="submit" class="btn btn-success btn-rounded"th:text="#{button.add.route}"></button>
                                 </div>
                             </div>
+                            <br>
                         </div>
-                    </td>
                 </div>
-            </form>
         </div>
+        </td>
     </div>
+    </form>
+</div>
+</div>
 </div>
 <!-- Footer Start -->
 <div th:replace="fragments/footer :: footer"></div>
