--- a/src/main/resources/templates/admin/stations/station_add.html
+++ b/src/main/resources/templates/admin/stations/station_add.html
@@ -18,19 +18,28 @@
                         <p th:each="err : ${#fields.errors('*')}" th:text="${err}"></p>
                     </div>
                     <td class="row">
-                        <div class="col-md-3">
-                            <div class="input-group mb-3">
-                                <input type="text" class="form-control" th:field="*{name}" placeholder="Station name"
-                                       th:errorclass="is-invalid">
-                            </div>
-                            <div class="input-group mb-3">
-                                <input type="text" class="form-control" th:field="*{code}" placeholder="Station code"
-                                       th:errorclass="is-invalid">
-                            </div>
-                            <br>
-                            <div align="center">
-                                <div class="col-4">
-                                    <button type="submit" class="btn btn-success btn-rounded">Add</button>
+                        <div class="col-md-4">
+                            <div class="card-transparent ">
+                                <div class="card-block special-card"
+                                     style="background-color: rgba(245, 245, 245, 0.7); border-radius:10px;">
+                                    <h5 class="card-header" th:text="#{admin.station.add.form}"></h5>
+                                    <div class="form-helper" th:text="#{label.station.name}"></div>
+                                    <div class="input-group mb-3">
+                                        <input type="text" class="form-control" th:field="*{name}"
+                                               th:errorclass="is-invalid">
+                                    </div>
+
+                                    <div class="form-helper" th:text="#{label.station.code}"></div>
+                                    <div class="input-group mb-3">
+                                        <input type="text" class="form-control" th:field="*{code}"
+                                               th:errorclass="is-invalid">
+                                    </div>
+                                    <div align="center">
+                                        <div class="col-4">
+                                            <button type="submit" class="btn btn-success btn-rounded" th:text="#{button.add.station}"></button>
+                                        </div>
+                                    </div>
+                                    <br>
                                 </div>
                             </div>
                         </div>
