--- a/src/main/resources/templates/admin/stations/station_list.html
+++ b/src/main/resources/templates/admin/stations/station_list.html
@@ -12,19 +12,20 @@
             <table class="table table-sm table-bordered align-middle mb-0 bg-white">
                 <thead class="bg-light">
                 <tr>
-                    <th> Station Id</th>
-                    <th> Stations Name</th>
-                    <th> International Code</th>
+                    <th th:text="#{admin.stations.id}"></th>
+                    <th th:text="#{admin.stations.name}"></th>
+                    <th th:text="#{admin.stations.code}"></th>
+                    <th th:text="#{admin.actions}"></th>
                 </tr>
                 </thead>
                 <tbody>
                 <tr th:if="${noStations}">
-                    <td colspan="3"> No Stations Available</td>
+                    <td colspan="4" th:text="#{admin.no.stations.found}"></td>
                 </tr>
                 <tr th:each="station : ${stationsDto}">
-                    <td><span th:text="${station.id}"> Station Id </span></td>
-                    <td><span th:text="${station.name}"> Stations Name </span></td>
-                    <td><span th:text="${station.code}"> International Code </span></td>
+                    <td><span th:text="${station.id}"></span></td>
+                    <td><span th:text="${station.name}"></span></td>
+                    <td><span th:text="${station.code}"></span></td>
                     <td>
                         <form th:method="GET" action="#" th:action="@{/admin/stations/{id}/edit(id=${station.id})}">
                             <button class="btn btn-success btn-rounded" type="submit"><i class="fas fa-edit "></i>
@@ -41,8 +42,7 @@
             </table>
             <br>
             <form th:method="GET" action="#" th:action="@{/admin/stations/add}">
-                <button class="btn btn-success btn-rounded" type="submit">Add Station
-                </button>
+                <button class="btn btn-success btn-rounded" type="submit" th:text="#{button.add.station}"></button>
             </form>
         </div>
     </div>
