--- a/src/main/resources/templates/admin/users/user_edit.html
+++ b/src/main/resources/templates/admin/users/user_edit.html
@@ -8,45 +8,59 @@
      style="background-image: url('/images/background.jpg');
       height: 800px;">
     <div class="mask" style="background-color: rgba(0, 0, 0, 0.7);">
-        <div class="opacity-80">
-            <form action="#" th:action="@{/admin/users/{id}/edit(id=${user.id})}" th:object="${user}" method="POST">
-                <br>
-                <div class="row d-flex justify-content-center">
-                    <div class="alert alert-danger" th:if="${#fields.hasErrors('*')}">
-                        <p th:each="err : ${#fields.errors('*')}" th:text="${err}"></p>
-                    </div>
-                    <td class="row">
-                        <div class="col-md-3">
-                            <div class="input-group mb-3">
-                                <input type="text" class="form-control" th:field="*{firstName}" placeholder="First Name"
-                                       th:errorclass="is-invalid" required>
-                            </div>
-                            <div class="input-group mb-3">
-                                <input type="text" class="form-control" th:field="*{lastName}" placeholder="Last Name"
-                                       th:errorclass="is-invalid" required>
-                            </div>
-                            <div class="input-group mb-3">
-                                <input type="email" class="form-control" th:field="*{email}" placeholder="Email"
-                                       th:errorclass="is-invalid" required>
-                            </div>
-                            <select class="form-select" th:field="*{role}">
-                                <option th:each="role : ${T(ua.martishyn.app.utils.Role).values()}"
-                                        th:value="${role}"
-                                        th:text="${role}">
-                                </option>
-                            </select>
-                            <br>
-                            <div align="center">
-                                <div class="col-4">
-                                    <button type="submit" class="btn btn-success btn-rounded">Update</button>
+
+        <form action="#" th:action="@{/users/admin/{id}/edit(id=${user.id})}" th:object="${user}" method="POST">
+            <br>
+            <div class="row d-flex justify-content-center">
+                <div class="alert alert-danger" th:if="${#fields.hasErrors('*')}">
+                    <p th:each="err : ${#fields.errors('*')}" th:text="${err}"></p>
+                </div>
+                <td class="row">
+                    <div class="col-md-4">
+                        <div class="card-transparent">
+                            <div class="card-block special-card"
+                                     style="background-color: rgba(245, 245, 245, 0.7); border-radius:10px;">
+                                <h5 class="card-header" th:text="#{admin.users.edit.form}"></h5>
+
+                                <div class="form-helper" th:text="#{label.user.first.name}"></div>
+                                <div class="input-group mb-3">
+                                    <input type="text" class="form-control" th:field="*{firstName}"
+                                           th:errorclass="is-invalid" required>
                                 </div>
+
+                                <div class="form-helper" th:text="#{label.user.last.name}"></div>
+                                <div class="input-group mb-3">
+                                    <input type="text" class="form-control" th:field="*{lastName}"
+                                           placeholder="Last Name"
+                                           th:errorclass="is-invalid" required>
+                                </div>
+                                <div class="form-helper" th:text="#{label.user.email}"></div>
+                                <div class="input-group mb-3">
+                                    <input type="email" class="form-control" th:field="*{email}" placeholder="Email"
+                                           th:errorclass="is-invalid" required>
+                                </div>
+
+                                <div class="form-helper" th:text="#{label.user.role}"></div>
+                                <select class="form-select" th:field="*{role}">
+                                    <option th:each="role : ${T(ua.martishyn.app.utils.enums.Role).values()}"
+                                            th:value="${role}"
+                                            th:text="${role}">
+                                    </option>
+                                </select>
+                                <div align="center">
+                                    <div class="col-4">
+                                        <button type="submit" class="btn btn-success btn-rounded" th:text="#{button.update}"></button>
+                                    </div>
+                                </div>
+                                <br>
                             </div>
                         </div>
-                    </td>
-                </div>
-            </form>
-        </div>
+                    </div>
+                </td>
+            </div>
+        </form>
     </div>
+</div>
 </div>
 <!-- Footer Start -->
 <div th:replace="fragments/footer :: footer"></div>
