--- a/src/main/resources/templates/admin/users/user_list.html
+++ b/src/main/resources/templates/admin/users/user_list.html
@@ -12,15 +12,15 @@
             <table class="table table-sm table-bordered align-middle mb-0 bg-white">
                 <thead class="bg-light">
                 <tr>
-                    <th>Name</th>
-                    <th>Role</th>
-                    <th>Status</th>
-                    <th>Actions</th>
+                    <th th:text="#{admin.users.bio}"></th>
+                    <th th:text="#{admin.users.role}"></th>
+                    <th th:text="#{admin.users.status}"></th>
+                    <th th:text="#{admin.actions}"></th>
                 </tr>
                 </thead>
                 <tbody>
                 <tr th:if="${noUsers}">
-                    <td colspan="2"> No Users Available</td>
+                    <td colspan="4" th:text="#{admin.no.users.found}"></td>
                 </tr>
                 <tr th:each="user : ${userDtoList}">
                     <td>
@@ -41,12 +41,12 @@
                         <span class="badge badge-success rounded-pill d-inline">Active</span>
                     </td>
                     <td>
-                        <form th:method="GET" action="#" th:action="@{/admin/users/{id}/edit(id=${user.id})}">
+                        <form th:method="GET" action="#" th:action="@{/users/admin/{id}/edit(id=${user.id})}">
                             <button class="btn btn-success btn-rounded" type="submit"><i class="fas fa-edit "></i>
                             </button>
                         </form>
                         <form th:method="POST" action="#"
-                              th:action="@{/admin/users/delete/{id}(id=${user.id})}">
+                              th:action="@{/users/admin/delete/{id}(id=${user.id})}">
                             <button class="btn btn-outline-danger btn-rounded" type="submit"><i
                                     class="fas fa-trash"></i>
                             </button>
