--- a/src/main/resources/templates/admin/wagons/wagon_add.html
+++ b/src/main/resources/templates/admin/wagons/wagon_add.html
@@ -18,34 +18,45 @@
                         <p th:each="err : ${#fields.errors('*')}" th:text="${err}"></p>
                     </div>
                     <td class="row">
-                        <div class="col-md-3">
-                            <div class="input-group mb-3">
-                                <select class="form-select" th:field="*{route}" id="dropDownList" required>
-                                    <option value="">Select Route id</option>
-                                    <option th:each="id : ${routeIds}" th:value="${id}"
-                                            th:text="${id}"></option>
-                                </select>
-                            </div>
-                            <div class="input-group mb-3">
-                            <select class="form-select" th:field="*{type}" required>
-                                <option th:each="type : ${T(ua.martishyn.app.utils.Type).values()}"
-                                        th:value="${type}"
-                                        th:text="${type}">
-                                </option>
-                            </select>
-                            </div>
-                            <div class="input-group mb-3">
-                                <input type="text" class="form-control" th:field="*{numOfSeats}"
-                                       placeholder="Number of seats" th:errorclass="is-invalid" required>
-                            </div>
+                        <div class="col-md-4">
+                            <div class="card-transparent ">
+                                <div class="card-block special-card"
+                                     style="background-color: rgba(245, 245, 245, 0.7); border-radius:10px;">
+                                    <h5 class="card-header" th:text="#{admin.wagon.add.form}"></h5>
+                                    <div class="form-helper" th:text="#{label.wagon.route}"></div>
+                                    <select class="form-select" th:field="*{route}" id="dropDownList" required>
+                                        <option th:each="id : ${routeIds}" th:value="${id}"
+                                                th:text="${id}"></option>
+                                    </select>
 
-                            <div class="input-group mb-3">
-                                <input type="text" class="form-control" th:field="*{basePrice}"
-                                       placeholder="Basic price for seat" th:errorclass="is-invalid" required>
-                            </div>
-                            <div align="center">
-                                <div class="col-4">
-                                    <button type="submit" class="btn btn-success btn-rounded">Add</button>
+                                    <div class="form-helper" th:text="#{label.wagon.wagon-type}"></div>
+                                    <div class="input-group mb-3">
+                                        <select class="form-select" th:field="*{type}" required>
+                                            <option th:each="type : ${T(ua.martishyn.app.utils.enums.Type).values()}"
+                                                    th:value="${type}"
+                                                    th:text="${type}">
+                                            </option>
+                                        </select>
+                                    </div>
+
+                                    <div class="form-helper" th:text="#{label.wagon.seats}"></div>
+                                    <div class="input-group mb-3">
+                                        <input type="text" class="form-control" th:field="*{numOfSeats}"
+                                               th:errorclass="is-invalid" required>
+                                    </div>
+
+                                    <div class="form-helper" th:text="#{label.wagon.base-price}"></div>
+                                    <div class="input-group mb-3">
+                                        <input type="text" class="form-control" th:field="*{basePrice}"
+                                               th:errorclass="is-invalid" required>
+                                    </div>
+                                    <div align="center">
+                                        <div class="col-4">
+                                            <button type="submit" class="btn btn-success btn-rounded" th:text="#{button.add.wagon}">
+                                            </button>
+                                        </div>
+                                    </div>
+                                    <br>
                                 </div>
                             </div>
                         </div>
