--- a/src/main/resources/templates/admin/wagons/wagon_list.html
+++ b/src/main/resources/templates/admin/wagons/wagon_list.html
@@ -12,17 +12,17 @@
             <table class="table table-sm table-bordered align-middle mb-0 bg-white">
                 <thead>
                 <tr>
-                    <th>Wagon Id</th>
-                    <th>Route Id</th>
-                    <th>Wagon type</th>
-                    <th>Seats available</th>
-                    <th>Basic price</th>
-                    <th>Action</th>
+                    <th th:text="#{admin.wagons.wagon}"></th>
+                    <th th:text="#{admin.wagons.route}"></th>
+                    <th th:text="#{admin.wagons.wagon-type}"></th>
+                    <th th:text="#{admin.wagons.seats}"></th>
+                    <th th:text="#{admin.wagons.price}"></th>
+                    <th th:text="#{admin.actions}"></th>
                 </tr>
                 </thead>
                 <tbody>
                 <tr th:if="${noWagons}">
-                    <td colspan="5"> No Wagons Available</td>
+                    <td colspan="5" th th:text="#{admin.no.wagons.found}"></td>
                 </tr>
                 <tr th:each="wagon: ${wagonsList}">
                     <td><span th:text="${wagon.id}"> Wagon Id </span></td>
@@ -56,9 +56,12 @@
         </div>
         <br>
         <form th:method="GET" action="#" th:action="@{/admin/wagons/add-form}">
-            <button class="btn btn-success btn-rounded" type="submit">Add wagon</button>
+            <button class="btn btn-success btn-rounded" type="submit" th:text="#{button.add.wagon}"></button>
         </form>
     </div>
 </div>
+<!-- Footer Start -->
+<div th:replace="fragments/footer :: footer"></div>
+<!-- Footer End -->
 </body>
 </html>
