--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -45,13 +45,20 @@
                 <div class="collapse navbar-collapse" id="navbarText">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" th:href="@{/index}">Home</a>
+                            <a class="nav-link active" aria-current="page" th:href="@{/index}" th:text="#{nav.home}"
+                            ></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" th:href="@{/abouts-us}">About us</a>
+                            <a class="nav-link active" aria-current="page"
+                               th:text="#{nav.about-us}"></a>
                         </li>
                     </ul>
                 </div>
+
+                <a th:href="@{/?lang=en}"><i class="flag flag-united-kingdom"></i></a>
+
+                <a th:href="@{/?lang=uk}"><i class="flag flag-ukraine"></i></a>
+
                 <a class="navbar-brand">Welcome, Guest</a>
                 <a class="navbar-brand mt-2 mt-lg-0" th:href="@{/login}">
                     <img
@@ -102,7 +109,8 @@
                             loading="lazy"
                     />
                 </a>
-                <a class="navbar-brand" th:text = "Welcome + ', ' + ${#authentication.getPrincipal().getUser().getFirstName}"/> </a>
+                <a class="navbar-brand"
+                   th:text="Welcome + ', ' + ${#authentication.getPrincipal().getUser().getFirstName}"/> </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                         aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -113,13 +121,17 @@
                             <a class="nav-link active" aria-current="page" th:href="@{/index}">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" th:href="@{/abouts-us}">About us</a>
+                            <a class="nav-link active" aria-current="page" th:href="@{/abouts-us}" th:text="#{nav.about-us}"></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" th:href="@{/user/tickets}">My tickets</a>
+                            <a class="nav-link active" aria-current="page" th:href="@{/tickets/show}">My tickets</a>
                         </li>
                     </ul>
                 </div>
+                <a th:href="@{/?lang=en}"><i class="flag flag-united-kingdom"></i></a>
+
+                <a th:href="@{/?lang=uk}"><i class="flag flag-ukraine"></i></a>
+
                 <!-- Avatar -->
                 <div class="dropdown">
                     <a
@@ -144,10 +156,11 @@
                             aria-labelledby="navbarDropdownMenuAvatar"
                     >
                         <li>
-                            <a class="dropdown-item" href="#">My profile</a>
+                            <a class="dropdown-item" th:text="#{nav.user.about}"
+                               th:href="@{/users/about}"></a>
                         </li>
                         <li>
-                            <a class="dropdown-item" th:href="@{/logout}">Logout</a>
+                            <a class="dropdown-item" th:href="@{/logout}" th:text="#{nav.user.logout}">Logout</a>
                         </li>
                     </ul>
                 </div>
@@ -190,29 +203,33 @@
                             <a class="nav-link active" aria-current="page" th:href="@{/index}">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" th:href="@{/abouts-us}">About us</a>
+                            <a class="nav-link active" aria-current="page" th:href="@{/abouts-us}" th:text="#{nav.about-us}"></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" th:href="@{/admin/routes}">
-                                ROUTES
+                            <a class="nav-link active" aria-current="page" th:href="@{/admin/routes}"
+                               th:text="#{nav.admin.routes}">
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" th:href="@{/admin/wagons}">
-                                WAGONS
+                            <a class="nav-link active" aria-current="page" th:href="@{/admin/wagons}"
+                               th:text="#{nav.admin.wagons}">
+
                             </a>
                         </li>
                         <li class="nav-item"><a class="nav-link active" aria-current="page"
-                                                th:href="@{/admin/stations}">
-                            STATIONS
+                                                th:href="@{/admin/stations}" th:text="#{nav.admin.stations}">
                         </a>
                         </li>
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" th:href="@{/admin/users}">
-                            USERS
-                        </a>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page"
+                                                th:href="@{/users/admin/all}"
+                                                th:text="#{nav.admin.users}"></a>
                         </li>
                     </ul>
                 </div>
+                <a th:href="@{/?lang=en}"><i class="flag flag-united-kingdom"></i></a>
+
+                <a th:href="@{/?lang=uk}"><i class="flag flag-ukraine"></i></a>
+
                 <a class="navbar-brand">Welcome, ADMIN</a>
                 <!-- Avatar -->
                 <div class="dropdown">
@@ -238,7 +255,8 @@
                             aria-labelledby="navbarDropdownMenuAvatar"
                     >
                         <li>
-                            <a class="dropdown-item" href="#">My profile</a>
+                            <a class="dropdown-item" th:href="@{/users/about}" th:text="#{nav.user.about}"
+                            ></a>
                         </li>
                         <li>
                             <a class="dropdown-item" th:href="@{/logout}">Logout</a>
