--- a/src/main/resources/templates/common/search_result.html
+++ b/src/main/resources/templates/common/search_result.html
@@ -105,6 +105,11 @@
         </div>
     </div>
 </div>
+<script>
+    function popup() {
+        window.open("../popup/searchspring", 'window', 'width=200,height=100');
+    }
+</script>
 <!-- Footer Start -->
 <div th:replace="fragments/footer :: footer"></div>
 <!-- Footer End -->
