--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -217,7 +217,7 @@
                             </a>
                         </li>
                         <li class="nav-item"><a class="nav-link active" aria-current="page"
-                                                th:href="@{/admin/stations}" th:text="#{nav.admin.stations}">
+                                                th:href="@{/admin/stations/all}" th:text="#{nav.admin.stations}">
                         </a>
                         </li>
                         <li class="nav-item"><a class="nav-link active" aria-current="page"
