--- a/src/main/resources/templates/common/show_route_schedule.html
+++ b/src/main/resources/templates/common/show_route_schedule.html
@@ -6,41 +6,38 @@
 <div th:replace="fragments/header :: header"></div>
 <div class="p-5 text-center bg-image"
      style="background-image: url('/images/background.jpg');
-      height: 1200px;">
+      height: 600px;">
     <div class="mask" style="background-color: rgba(0, 0, 0, 0.7);">
-        <div class="opacity-80">
-            <table class="table table-sm table-bordered align-middle mb-0 bg-white">
+        <div class="opacity-80" align="center" >
+            <div class="col-4 m-4" >
+            <table class="table table-sm table-bordered align-middle mb-0 bg-white responsive">
                 <thead>
                 <tr>
-                    <th scope="col">Route schedule</th>
+                    <th style="width:30%"  scope="col"><i class="fas fa-clipboard-list fa-3x"></i></th>
                 </tr>
                 </thead>
                 <tbody>
                 <tr th:each="r, iter : ${desiredRoute}">
-                    <td>
+                    <td colspan="1" align="center">
                         <div th:if="${iter.first}">
-                            <p th:text="${r.station.name}">
-                            <p th:text="${r.departure}">
+                            <p style="color:green;font-family:verdana;" th:text="${'Departure station: ' + r.station.name}">
+                            <p th:text="${'Time of departure: ' + r.departure}">
                         </div>
                         <div th:if="${iter.last}">
-                            <p th:text="${r.station.name} + ': '"></p>
-                            <p th:text="${r.arrival}"></p>
+                            <p style="color:green;font-family:verdana;"th:text="${'Arrival station: ' + r.station.name}"></p>
+                            <p th:text="${'Time of arrival: ' + r.arrival}"></p>
                         </div>
                         <div th:if="${(iter.last==false && iter.first==false)}">
-                            <p th:text="${r.station.name}">
-                            <p th:text="${r.departure}">
-                            <p th:text="${r.arrival}">
+                            <p style="color:green;font-family:verdana;" th:text="${iter.count + ' station: ' + r.station.name}">
+                            <p th:text="${'Arrival to station: ' + r.arrival}">
+                            <p th:text="${'Departure from station: ' + r.departure}">
                         </div>
                     </td>
                 </tr>
                 </tbody>
-                <tr>
-                    <td colspan="1"> <span style="text-align: left; color:green; font-family:courier; font-size:79%;">
-				*After you will pay for ticket, you may download it
-				</span></td>
-                </tr>
             </table>
         </div>
+    </div>
     </div>
 </div>
 <!-- Footer Start -->
