Added mail notifications for user with views. Added tests. Bug fix with route duration formatting to HH:mm

--- a/src/main/resources/templates/common/search_result.html
+++ b/src/main/resources/templates/common/search_result.html
@@ -35,7 +35,7 @@
 
                     <td th:text="${matchingRoute.routeDTO.firstStation.station.name} + ' - ' + ${matchingRoute.routeDTO.lastStation.station.name}"></td>
 
-                    <td th:text="${matchingRoute.routeDTO.firstStation.departure} + ' - ' + ${matchingRoute.routeDTO.firstStation.arrival}"></td>
+                    <td th:text="${matchingRoute.routeDTO.firstStation.departure} + ' - ' + ${matchingRoute.routeDTO.lastStation.arrival}"></td>
 
                     <td th:text="${matchingRoute.roadTime}"></td>
                     <td styles="text-align:center">
